// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-local - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure Local guidance. WHEN: Azure Local, Azure Stack HCI, Arc resource bridge, custom location, Azure Local VM, Arc VM, AKS on Azure Local, AKS hybrid, SDN, Lifecycle Manager. Exclude cloud VM/AKS guidance.",
  "extractedKeywords": [
    "aks",
    "azure",
    "bridge",
    "cli",
    "cloud",
    "custom",
    "deploy",
    "exclude",
    "guidance",
    "hybrid",
    "kubernetes",
    "lifecycle",
    "local",
    "location",
    "manager",
    "mcp",
    "monitor",
    "networking",
    "resource",
    "security",
    "sql",
    "stack",
    "when",
  ],
  "name": "azure-local",
}
`;

exports[`azure-local - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "azure",
  "bridge",
  "cli",
  "cloud",
  "custom",
  "deploy",
  "exclude",
  "guidance",
  "hybrid",
  "kubernetes",
  "lifecycle",
  "local",
  "location",
  "manager",
  "mcp",
  "monitor",
  "networking",
  "resource",
  "security",
  "sql",
  "stack",
  "when",
]
`;
